reports/scouting/2026-05-04/spartans_cc_essex/v1/scout.md
# Scout — Spartans CC, Essex 1st XI (v1)

_All sections: 1st XI only, League + Cup unless noted. Compared vs Rainham CC, Essex 1st XI. Today 2026-05-04._

## 0. Current league table

_Essex League — Division 05 - 1st XI Division Four_

| Pos | Team | P | W | Pts | Form |
|--:|------|--:|--:|---:|------|
| 1 | Benfleet CC | 0 | 0 | 0 | — |
| 2 | Bow Green CC | 0 | 0 | 0 | — |
| 3 | Hawks CC | 0 | 0 | 0 | — |
| 4 | London Eagles CC | 0 | 0 | 0 | — |
| 5 | Rainham CC, Essex | 0 | 0 | 0 | — |
| 6 | Redbridge CC | 0 | 0 | 0 | — |
| 7 | Roding Valley CC | 0 | 0 | 0 | — |
| 8 | South Woodford CC | 0 | 0 | 0 | — |
| 9 | **Spartans CC, Essex** | 0 | 0 | 0 | — |
| 10 | Wickford CC | 0 | 0 | 0 | — |

## 1. Last 3 seasons — 1st XI league finishing positions

| Season | League / Division | Pos | P | W | L | D | NR | Win% |
|--:|---|--:|--:|--:|--:|--:|--:|--:|
| 2024 | Essex and East London Cricket League — Premier Division | 2/14 | 18 | 11 | 4 | 2 | 0 | 61.1% |
| 2025 | Essex and East London Cricket League — Premier Division | 3/10 | 18 | 11 | 3 | 3 | 0 | 61.1% |
| 2026 | Essex League — Division 05 - 1st XI Division Four | 9/10 | 0 | 0 | 0 | 0 | 0 | 0.0% |

## 2. Top run scorers — last 3 seasons (1st XI, L+C)

| # | Player | M | I | NO | Runs | HS | Avg | SR | 50 | 100 | Pos |
|--:|--------|--:|--:|--:|---:|---:|---:|---:|--:|--:|--:|
| 1 | [Fahad Khan](https://spartansessex.play-cricket.com/player_stats/batting/6354683?rule_type_id=179) | 24 | 24 | 0 | **718** | 143 | 29.92 | 87.5 | 3 | 1 | 2 |
| 2 | [Nageswara Nallabothu](https://spartansessex.play-cricket.com/player_stats/batting/5352392?rule_type_id=179) | 11 | 11 | 1 | **619** | 159 | 61.90 | 138.7 | 3 | 2 | 4 |
| 3 | [Basim Shaukat Khan](https://spartansessex.play-cricket.com/player_stats/batting/6066382?rule_type_id=179) | 25 | 25 | 6 | **557** | 93 | 29.32 | 66.5 | 3 | 0 | 3 |
| 4 | [Syed Waseem](https://spartansessex.play-cricket.com/player_stats/batting/4991927?rule_type_id=179) | 27 | 27 | 0 | **512** | 91 | 18.96 | 74.9 | 1 | 0 | 1 |
| 5 | [Parimeet Jadav](https://spartansessex.play-cricket.com/player_stats/batting/5596358?rule_type_id=179) | 11 | 11 | 4 | **490** | 153 | 70.00 | 117.2 | 1 | 2 | 3 |
| 6 | [Prajwal Reddy](https://spartansessex.play-cricket.com/player_stats/batting/6549101?rule_type_id=179) | 17 | 17 | 4 | **481** | 79 | 37.00 | 103.4 | 3 | 0 | 4 |
| 7 | [Nimesh Mistry](https://spartansessex.play-cricket.com/player_stats/batting/5630680?rule_type_id=179) | 16 | 16 | 2 | **450** | 91 | 32.14 | 86.5 | 2 | 0 | 3 |
| 8 | [MV Rao MV Rao](https://spartansessex.play-cricket.com/player_stats/batting/5819543?rule_type_id=179) | 11 | 11 | 1 | **287** | 110 | 28.70 | 104.7 | 0 | 1 | 7 |
| 9 | [Pradyumna Yadma](https://spartansessex.play-cricket.com/player_stats/batting/6587670?rule_type_id=179) | 13 | 13 | 1 | **212** | 35 | 17.67 | 99.1 | 0 | 0 | 2 |
| 10 | [Yash Dhanak](https://spartansessex.play-cricket.com/player_stats/batting/6208192?rule_type_id=179) | 9 | 9 | 0 | **164** | 52 | 18.22 | 60.5 | 1 | 0 | 5 |
| 11 | [Daksh Ramchandra Reddy Chirra](https://spartansessex.play-cricket.com/player_stats/batting/5042590?rule_type_id=179) | 8 | 8 | 0 | **158** | 60 | 19.75 | 64.5 | 1 | 0 | 6 |
| 12 | [sai krishna chennaboina](https://spartansessex.play-cricket.com/player_stats/batting/6209466?rule_type_id=179) | 6 | 6 | 2 | **134** | 69 | 33.50 | 80.7 | 1 | 0 | 7 |
| 13 | [Meet Patel(Bala)](https://spartansessex.play-cricket.com/player_stats/batting/6341248?rule_type_id=179) | 7 | 7 | 2 | **122** | 35 | 24.40 | 85.3 | 0 | 0 | 6 |
| 14 | [Sri Arun Ayyappa](https://spartansessex.play-cricket.com/player_stats/batting/6219432?rule_type_id=179) | 10 | 10 | 1 | **122** | 40 | 13.56 | 46.7 | 0 | 0 | 3 |
| 15 | [Upendar Peddy](https://spartansessex.play-cricket.com/player_stats/batting/5898038?rule_type_id=179) | 2 | 2 | 0 | **94** | 81 | 47.00 | 110.6 | 1 | 0 | 2 |

## 3. Top wicket takers — last 3 seasons (1st XI, L+C)

| # | Bowler | M | Overs | Mdns | Runs | Wkts | Avg | Econ | Best | 5wi | 4wi |
|--:|--------|--:|--:|--:|---:|---:|---:|---:|----|--:|--:|
| 1 | [Rakesh Chowdary Tallapaneni](https://spartansessex.play-cricket.com/player_stats/bowling/6452189?rule_type_id=179) | 19 | 158.2 | 22 | 577 | **60** | 9.62 | 3.64 | 7/35 | 4 | 4 |
| 2 | [Ven Kompella](https://spartansessex.play-cricket.com/player_stats/bowling/4979621?rule_type_id=179) | 30 | 135.1 | 4 | 838 | **41** | 20.44 | 6.20 | 5/15 | 2 | 1 |
| 3 | [MV Rao MV Rao](https://spartansessex.play-cricket.com/player_stats/bowling/5819543?rule_type_id=179) | 13 | 83.2 | 16 | 308 | **23** | 13.39 | 3.70 | 5/16 | 2 | 0 |
| 4 | [Basim Shaukat Khan](https://spartansessex.play-cricket.com/player_stats/bowling/6066382?rule_type_id=179) | 22 | 106 | 18 | 420 | **20** | 21.00 | 3.96 | 5/28 | 1 | 0 |
| 5 | [Yash Dhanak](https://spartansessex.play-cricket.com/player_stats/bowling/6208192?rule_type_id=179) | 10 | 63.2 | 12 | 242 | **19** | 12.74 | 3.82 | 7/16 | 1 | 0 |
| 6 | [Jaydeep Dhorada](https://spartansessex.play-cricket.com/player_stats/bowling/5794161?rule_type_id=179) | 15 | 93.1 | 9 | 325 | **17** | 19.12 | 3.49 | 4/32 | 0 | 1 |
| 7 | [Sri Arun Ayyappa](https://spartansessex.play-cricket.com/player_stats/bowling/6219432?rule_type_id=179) | 9 | 40 | 5 | 146 | **13** | 11.23 | 3.65 | 4/11 | 0 | 1 |
| 8 | [Nageswara Nallabothu](https://spartansessex.play-cricket.com/player_stats/bowling/5352392?rule_type_id=179) | 9 | 46.2 | 3 | 208 | **12** | 17.33 | 4.49 | 3/10 | 0 | 0 |
| 9 | [Boballa Rajesh Reddy](https://spartansessex.play-cricket.com/player_stats/bowling/5345637?rule_type_id=179) | 8 | 41.5 | 3 | 204 | **10** | 20.40 | 4.88 | 5/51 | 1 | 0 |
| 10 | [Meet Patel(Bala)](https://spartansessex.play-cricket.com/player_stats/bowling/6341248?rule_type_id=179) | 7 | 39.2 | 1 | 207 | **10** | 20.70 | 5.26 | 4/89 | 0 | 1 |
| 11 | [Parimeet Jadav](https://spartansessex.play-cricket.com/player_stats/bowling/5596358?rule_type_id=179) | 10 | 55 | 8 | 193 | **9** | 21.44 | 3.51 | 2/5 | 0 | 0 |
| 12 | [Lavathishanth Tharmalingam](https://spartansessex.play-cricket.com/player_stats/bowling/4951819?rule_type_id=179) | 5 | 19.1 | 0 | 84 | **7** | 12.00 | 4.38 | 3/20 | 0 | 0 |

## 4. Head-to-head vs Rainham CC, Essex 1st XI (any era in cache)

_No played 1st XI head-to-head matches in the cache._

**Upcoming fixtures:**
- 09/05/2026 (League, A)

## 5. Last 20 1st XI played matches (L+C)

- **L** [25/04/2026](https://play-cricket.com/website/results/7246944) · Cup · A vs **Redbridge CC** — Spartans 120/10 (31.5) · Redbridge 121/5 (34.2)
  - 🏏 [Kevalkumar Patel](https://spartansessex.play-cricket.com/player_stats/batting/3807075?rule_type_id=179) **20** (38b, #3)
  - 🎯 [Pritesh Patel 1](https://spartansessex.play-cricket.com/player_stats/bowling/4789321?rule_type_id=179) **3/18** (8.0ov)
- **W** [30/08/2025](https://play-cricket.com/website/results/7082239) · League · H vs **Aztecs CC** — Spartans 247/6 (41.0) · Aztecs, Ilford 155/10 (37.3)
  - 🏏 [Syed Ibrahim](https://spartansessex.play-cricket.com/player_stats/batting/6201500?rule_type_id=179) **57*** (46b, #5) · [Fahad Khan](https://spartansessex.play-cricket.com/player_stats/batting/6354683?rule_type_id=179) **56** (67b, #1)
  - 🎯 [Rakesh Chowdary Tallapaneni](https://spartansessex.play-cricket.com/player_stats/bowling/6452189?rule_type_id=179) **4/23** (9.0ov)
- **W** [23/08/2025](https://play-cricket.com/website/results/7082235) · League · A vs **Millwall Stars CC** — Millwall Stars 63/10 (21.2) · Spartans 69/1 (5.2)
  - 🏏 [Prajwal Reddy](https://spartansessex.play-cricket.com/player_stats/batting/6549101?rule_type_id=179) **48*** (21b, #2)
  - 🎯 [Meet Patel(Bala)](https://spartansessex.play-cricket.com/player_stats/bowling/6341248?rule_type_id=179) **3/8** (2.2ov) · [Rakesh Chowdary Tallapaneni](https://spartansessex.play-cricket.com/player_stats/bowling/6452189?rule_type_id=179) **3/9** (7.0ov)
- **W** [16/08/2025](https://play-cricket.com/website/results/7082231) · League · A vs **Roding Valley CC** — Spartans 289/10 (40.4) · Roding Valley 176/9 (31)
  - 🏏 [Nageswara Nallabothu](https://spartansessex.play-cricket.com/player_stats/batting/5352392?rule_type_id=179) **67** (61b, #5)
  - 🎯 [Lavathishanth Tharmalingam](https://spartansessex.play-cricket.com/player_stats/bowling/4951819?rule_type_id=179) **3/20** (7ov) · [Rakesh Chowdary Tallapaneni](https://spartansessex.play-cricket.com/player_stats/bowling/6452189?rule_type_id=179) **3/31** (9ov)
- **W** [09/08/2025](https://play-cricket.com/website/results/7082224) · League · H vs **Tower Hamlets CC** — Spartans 283/10 (40.3) · Tower Hamlets 77/10 (15.1)
  - 🏏 [Nageswara Nallabothu](https://spartansessex.play-cricket.com/player_stats/batting/5352392?rule_type_id=179) **140** (113b, #4)
  - 🎯 [Rakesh Chowdary Tallapaneni](https://spartansessex.play-cricket.com/player_stats/bowling/6452189?rule_type_id=179) **7/35** (8ov)
- **W** [02/08/2025](https://play-cricket.com/website/results/7082220) · League · A vs **Waltham Forest CC** — Spartans 202/9 (47.0) · Waltham Forest 119/10 (25.4)
  - 🏏 [Daksh Ramchandra Reddy Chirra](https://spartansessex.play-cricket.com/player_stats/batting/5042590?rule_type_id=179) **60** (98b, #5)
  - 🎯 [Rakesh Chowdary Tallapaneni](https://spartansessex.play-cricket.com/player_stats/bowling/6452189?rule_type_id=179) **5/56** (11.4ov)
- **L** [26/07/2025](https://play-cricket.com/website/results/7082214) · League · A vs **Aztecs CC** — Spartans 105/10 (26.4) · Aztecs, Ilford 109/7 (29.2)
  - 🏏 [Basim Shaukat Khan](https://spartansessex.play-cricket.com/player_stats/batting/6066382?rule_type_id=179) **32** (60b, #3)
  - 🎯 [MV Rao MV Rao](https://spartansessex.play-cricket.com/player_stats/bowling/5819543?rule_type_id=179) **5/38** (11.2ov)
- **D** [19/07/2025](https://play-cricket.com/website/results/7082208) · League · H vs **Millwall Stars CC** — Spartans 175/2 (18.0) · Millwall Stars 130/4 (24.0)
  - 🏏 [MV Rao MV Rao](https://spartansessex.play-cricket.com/player_stats/batting/5819543?rule_type_id=179) **110*** (59b, #1)
  - 🎯 [Meet Patel(Bala)](https://spartansessex.play-cricket.com/player_stats/bowling/6341248?rule_type_id=179) **1/19** (4.0ov)
- **W** [12/07/2025](https://play-cricket.com/website/results/7082203) · League · H vs **Roding Valley CC** — Spartans 262/8 (45.0) · Roding Valley 128/9 (27.5)
  - 🏏 [Prajwal Reddy](https://spartansessex.play-cricket.com/player_stats/batting/6549101?rule_type_id=179) **46** (46b, #3)
  - 🎯 [Rakesh Chowdary Tallapaneni](https://spartansessex.play-cricket.com/player_stats/bowling/6452189?rule_type_id=179) **5/25** (9.0ov)
- **W** [05/07/2025](https://play-cricket.com/website/results/7082201) · League · A vs **Tower Hamlets CC** — Tower Hamlets 145/10 (37.1) · Spartans 149/3 (29.0)
  - 🏏 [Basim Shaukat Khan](https://spartansessex.play-cricket.com/player_stats/batting/6066382?rule_type_id=179) **38*** (66b, #3)
  - 🎯 [Rakesh Chowdary Tallapaneni](https://spartansessex.play-cricket.com/player_stats/bowling/6452189?rule_type_id=179) **4/40** (12ov)
- **D** [28/06/2025](https://play-cricket.com/website/results/7082193) · League · H vs **Essex Lions CC** — Essex Lions 317/4 (48.0) · Spartans 220/8 (46.0)
  - 🏏 [Fahad Khan](https://spartansessex.play-cricket.com/player_stats/batting/6354683?rule_type_id=179) **60** (59b, #1) · [Prajwal Reddy](https://spartansessex.play-cricket.com/player_stats/batting/6549101?rule_type_id=179) **52*** (64b, #7)
  - 🎯 [MV Rao MV Rao](https://spartansessex.play-cricket.com/player_stats/bowling/5819543?rule_type_id=179) **1/32** (6.0ov)
- **D** [21/06/2025](https://play-cricket.com/website/results/7082188) · League · H vs **East London Titans Sporting Club** — East London Titans Sporting Club 303/9 (48.0) · Spartans 220/7 (43.0)
  - 🏏 [Basim Shaukat Khan](https://spartansessex.play-cricket.com/player_stats/batting/6066382?rule_type_id=179) **56** (72b, #3)
  - 🎯 [Meet Patel(Bala)](https://spartansessex.play-cricket.com/player_stats/bowling/6341248?rule_type_id=179) **4/89** (15.0ov)
- **W** [14/06/2025](https://play-cricket.com/website/results/7082183) · League · A vs **Neo CC** — Neo 188/10 (39.5) · Spartans 191/3 (37.2)
  - 🏏 [Prajwal Reddy](https://spartansessex.play-cricket.com/player_stats/batting/6549101?rule_type_id=179) **55*** (52b, #4)
  - 🎯 [ROSHAN RATHOD](https://spartansessex.play-cricket.com/player_stats/bowling/6559485?rule_type_id=179) **4/32** (9.0ov) · [Rakesh Chowdary Tallapaneni](https://spartansessex.play-cricket.com/player_stats/bowling/6452189?rule_type_id=179) **4/51** (12.0ov)
- **A** [07/06/2025](https://play-cricket.com/website/results/7082178) · League · H vs **Victoria Park CC** — Spartans 173/10 (38.2) · Victoria Park 48/1 (10.0)
  - 🏏 [ROSHAN RATHOD](https://spartansessex.play-cricket.com/player_stats/batting/6559485?rule_type_id=179) **26** (35b, #7)
  - 🎯 [Rakesh Chowdary Tallapaneni](https://spartansessex.play-cricket.com/player_stats/bowling/6452189?rule_type_id=179) **1/30** (5.0ov)
- **L** [31/05/2025](https://play-cricket.com/website/results/7082175) · League · A vs **Essex Lions CC** — Essex Lions 304/6 (45.0) · Spartans 202/10 (36.5)
  - 🏏 [Prajwal Reddy](https://spartansessex.play-cricket.com/player_stats/batting/6549101?rule_type_id=179) **79** (52b, #6)
  - 🎯 [Rakesh Chowdary Tallapaneni](https://spartansessex.play-cricket.com/player_stats/bowling/6452189?rule_type_id=179) **2/41** (9.0ov)
- **L** [26/05/2025](https://play-cricket.com/website/results/7128306) · Cup · A vs **Victoria Park CC** — Victoria Park 167/10 (37.1) · Spartans 120/10 (30.4)
  - 🏏 [Shravan Kumar Thota](https://spartansessex.play-cricket.com/player_stats/batting/6559505?rule_type_id=179) **26** (50b, #11)
  - 🎯 [Ven Kompella](https://spartansessex.play-cricket.com/player_stats/bowling/4979621?rule_type_id=179) **4/49** (8.0ov) · [Vishnu Prasad Ms](https://spartansessex.play-cricket.com/player_stats/bowling/5775095?rule_type_id=179) **3/22** (4.1ov)
- **L** [24/05/2025](https://play-cricket.com/website/results/7082169) · League · H vs **Waltham Forest CC** — Spartans 109/10 (30.5) · Waltham Forest 113/3 (22.1)
  - 🏏 [Basim Shaukat Khan](https://spartansessex.play-cricket.com/player_stats/batting/6066382?rule_type_id=179) **38** (70b, #3)
  - 🎯 [MV Rao MV Rao](https://spartansessex.play-cricket.com/player_stats/bowling/5819543?rule_type_id=179) **3/20** (7.0ov)
- **W** [17/05/2025](https://play-cricket.com/website/results/7082164) · League · A vs **East London Titans Sporting Club** — Spartans 248/10 (45.0) · East London Titans Sporting Club 106/10 (20.5)
  - 🏏 [Syed Waseem](https://spartansessex.play-cricket.com/player_stats/batting/4991927?rule_type_id=179) **91** (108b, #1)
  - 🎯 [Basim Shaukat Khan](https://spartansessex.play-cricket.com/player_stats/bowling/6066382?rule_type_id=179) **5/28** (6.5ov) · [Rakesh Chowdary Tallapaneni](https://spartansessex.play-cricket.com/player_stats/bowling/6452189?rule_type_id=179) **3/18** (7ov)
- **W** [10/05/2025](https://play-cricket.com/website/results/7082159) · League · H vs **Neo CC** — Neo 241/10 (35.2) · Spartans 245/7 (41.2)
  - 🏏 [Basim Shaukat Khan](https://spartansessex.play-cricket.com/player_stats/batting/6066382?rule_type_id=179) **93*** (111b, #3)
  - 🎯 [Rakesh Chowdary Tallapaneni](https://spartansessex.play-cricket.com/player_stats/bowling/6452189?rule_type_id=179) **3/33** (9.0ov)
- **W** [03/05/2025](https://play-cricket.com/website/results/7082158) · League · A vs **Victoria Park CC** — Spartans 212/10 (32.5) · Victoria Park 80/10 (29.0)
  - 🏏 [MV Rao MV Rao](https://spartansessex.play-cricket.com/player_stats/batting/5819543?rule_type_id=179) **45** (32b, #8)
  - 🎯 [MV Rao MV Rao](https://spartansessex.play-cricket.com/player_stats/bowling/5819543?rule_type_id=179) **5/16** (8.0ov) · [Rakesh Chowdary Tallapaneni](https://spartansessex.play-cricket.com/player_stats/bowling/6452189?rule_type_id=179) **4/18** (9.0ov)

## 6. Patterns

### 6a. First-innings totals — last 10 of each quadrant

_The runs the team batting first put up — own innings on the **Bat 1st** row, opposition's on the **Bowl 1st** row. Avg shown prominently, median in brackets._

| | at Home | Away |
|---|---|---|
| **Bat 1st**<br>_own runs_ | **222** (med 247) <br><sub>n=10 · Jun '24 → Aug '25</sub> | **214** (med 207) <br><sub>n=10 · Jul '24 → Apr '26</sub> |
| **Bowl 1st**<br>_opp. runs_ | **214** (med 220.5) <br><sub>n=10 · Jun '22 → Jun '25</sub> | **180** (med 187.5) <br><sub>n=10 · Aug '23 → Aug '25</sub> |

### 6b. Run chase history — last 10 each (when Spartans CC, Essex batted second)

_Rating uses wickets remaining + overs remaining. 5/5 comfortable · 4/5 solid · 3/5 very close · 2/5 fell short · 1/5 no chance. T/D/A/NR shown as a special label._

**Home chases · Spartans CC, Essex batting second at home**

| Date | Opp | Tgt | Outcome | Detail |
|---|---|--:|---|---|
| [Jun '25](https://play-cricket.com/website/results/7082193) | Essex Lions CC | 318 | _Draw_ | draw |
| [Jun '25](https://play-cricket.com/website/results/7082188) | East London Titans Sporting Club | 304 | _Draw_ | draw |
| [May '25](https://play-cricket.com/website/results/7082159) | Neo CC | 242 | **4/5** Solid | won by 3w, 4ov in hand |
| [Aug '24](https://play-cricket.com/website/results/6553978) | London Riders CC | 154 | **5/5** Comfortable | won by 9w, 24ov in hand |
| [Jun '24](https://play-cricket.com/website/results/6553912) | Redbridge Parks CC | 103 | **5/5** Comfortable | won by 6w, 29ov in hand |
| [May '24](https://play-cricket.com/website/results/6553884) | East London Titans Sporting Club | 76 | **2/5** Fell short | 62 vs 76 — 14 short |
| [Jul '23](https://play-cricket.com/website/results/5960611) | Neo CC | 241 | **1/5** No chance | all out for 41 in 21.2ov |
| [May '23](https://play-cricket.com/website/results/5960556) | Roding Valley CC | 175 | **3/5** Very close | 3w + 3% overs left |
| [Aug '22](https://play-cricket.com/website/results/5354003) | Redbridge CC | 261 | **3/5** Very close | only 2w left |
| [Jun '22](https://play-cricket.com/website/results/5353998) | Aztecs CC | 202 | **5/5** Comfortable | won by 6w, 6ov in hand |

**Away chases · Spartans CC, Essex batting second away**

| Date | Opp | Tgt | Outcome | Detail |
|---|---|--:|---|---|
| [Aug '25](https://play-cricket.com/website/results/7082235) | Millwall Stars CC | 64 | **5/5** Comfortable | won by 9w, 40ov in hand |
| [Jul '25](https://play-cricket.com/website/results/7082201) | Tower Hamlets CC | 146 | **5/5** Comfortable | won by 7w, 11ov in hand |
| [Jun '25](https://play-cricket.com/website/results/7082183) | Neo CC | 189 | **5/5** Comfortable | won by 7w, 3ov in hand |
| [May '25](https://play-cricket.com/website/results/7082175) | Essex Lions CC | 305 | **2/5** Fell short | 202 vs 305 — 103 short |
| [May '25](https://play-cricket.com/website/results/7128306) | Victoria Park CC | 168 | **2/5** Fell short | 120 vs 168 — 48 short |
| [Apr '25](https://play-cricket.com/website/results/7108493) | East London Titans Sporting Club | 190 | **2/5** Fell short | 163 vs 190 — 27 short |
| [Aug '24](https://play-cricket.com/website/results/6554001) | Essex Lions CC | 229 | **4/5** Solid | won by 5w, 2ov in hand |
| [May '24](https://play-cricket.com/website/results/6553904) | Victoria Park CC | 114 | **3/5** Very close | only 2w left |
| [May '24](https://play-cricket.com/website/results/6553893) | London Eagles CC | 188 | **2/5** Fell short | 151 vs 188 — 37 short |
| [Aug '23](https://play-cricket.com/website/results/6015519) | Neo CC | 218 | **1/5** No chance | 129 vs 218 — 89 short (41% off) |

### 6c. Bowling style mix

- Pace: **0%** · Spin: **0%** · Unknown: 100% _(coverage 0%, 7103 balls across 39 matches)_

### 6d. Lineup style profile

- **0.0** left-handers in the XI on average · _(coverage 0% across 38 matches)_
- Opens batting with ≥1 LHB in **0%** of games · _(coverage 0% across 0 games)_
- Opens bowling with ≥1 left-armer in **0%** of games · _(coverage 0% across 0 games)_
- Opens bowling with ≥1 spinner in **0%** of games · _(same coverage as above)_

### 6e. When batting first vs second (last 3 seasons L+C)

- Spartans CC, Essex batting 1st: 23 played, 13W / 5L / 3D / 2NR — win rate 57%
- Spartans CC, Essex batting 2nd: 15 played, 8W / 5L / 2D — win rate 53%
- Rainham CC, Essex batting 1st: 16 played, 8W / 7L / 1D — win rate 50%
- Rainham CC, Essex batting 2nd: 18 played, 6W / 10L / 1D / 1NR — win rate 33%

### 6f. Home vs away (last 3 seasons L+C)

- Spartans CC, Essex at home: 18 played, 9W / 2L / 5D / 2NR — win rate 50%
- Spartans CC, Essex away: 21 played, 13W / 8L — win rate 62%
- Rainham CC, Essex at home: 17 played, 9W / 6L / 1D / 1NR — win rate 53%
- Rainham CC, Essex away: 18 played, 5W / 11L / 1D / 1NR — win rate 28%

### 6g. When they win the toss

**Won toss in 23 matches** — chose to bat 21 (91%), chose to field 2 (9%).

- Won toss → batted first → 21 played, 13W / 4L / 2D / 2NR — win rate 62%
- Won toss → fielded first → 2 played, 0W / 2L — win rate 0%

_Reference: lost toss → outcome: 15 played, 8W / 4L / 3D — win rate 53%._

### 6h. Team batting & bowling avg per season (1st XI, L+C)

| Season | Spartans CC, Essex bat | Rainham CC, Essex bat | Spartans CC, Essex bowl | Rainham CC, Essex bowl |
|--:|--:|--:|--:|--:|
| 2024 | 25.43 | 19.78 | 15.99 | 24.11 |
| 2025 | 22.31 | 17.96 | 18.96 | 24.20 |
| 2026 | 9.70 | 9.50 | 23.40 | 18.22 |

## 7. Web / video links

**Official / club channels**
- [Play-Cricket club page](https://spartansessex.play-cricket.com/home)
- [Club website](https://www.thespartanscricketclub.com/)
- [YouTube channel (@SpartansCC_Essex)](https://www.youtube.com/@SpartansCC_Essex)
- [Instagram (@spartanscricket)](https://www.instagram.com/spartanscricket/)

**Verified match videos**
- [H v Essex Lions CC (Cup, 06/09/2025)](https://youtu.be/01XHP9sG13U)
- [H v Aztecs CC, Ilford (League, 30/08/2025)](https://youtu.be/C75WRtZvlCs)
- [A v London Avengers CC (Cup, 28/08/2025)](https://youtu.be/rvIf-e9u7UE)
- [A v Millwall Stars CC (League, 23/08/2025)](https://youtu.be/UESK7IG6waI)
- [A v Roding Valley CC (League, 16/08/2025)](https://youtu.be/LGpeN00Ib0E)
- [H v Tower Hamlets CC (League, 09/08/2025)](https://youtu.be/rvEImb3YABM)
- [A v Waltham Forest CC (League, 02/08/2025)](https://youtu.be/dQcCTtS9Yg8)
- [H v Goodmayes United CC (Cup, 28/07/2025)](https://youtu.be/1ONSvioDkas)
- [A v Aztecs CC, Ilford (League, 26/07/2025)](https://youtu.be/7VeroHGmFA8)
- [H v Roding Valley CC (League, 12/07/2025)](https://youtu.be/Juz8Hc5fK4M)
- [A v Tower Hamlets CC (League, 05/07/2025)](https://youtu.be/HSSCw88FcKs)
- [H v Essex Lions CC (League, 28/06/2025)](https://youtu.be/swP8mS6ETKA)
- [H v Neo CC (Cup, 25/06/2025)](https://youtu.be/DvhbuC5oLY0)
- [A v Neo CC (League, 14/06/2025)](https://youtu.be/6fyq21wz4zg)
- [A v Essex Lions CC (League, 31/05/2025)](https://youtu.be/igN7DG5cA9I)
- [A v Victoria Park CC (Cup, 26/05/2025)](https://youtu.be/e62uZGAZbME)
